--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,7 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "./index.py",
-            "use": "@vercel/python"
-        }
+        {"src": "app.py", "use": "@vercel/python"}
     ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
-    ]
+    "routes": [{"src": "/(.*)", "dest": "app.py"}]
 }
