--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-        {"src": "app", "use": "@vercel/python"}
+        {"src": "app/__init__.py", "use": "@vercel/python"}
     ],
-    "routes": [{"src": "/(.*)", "dest": "app"}]
+    "routes": [{"src": "/(.*)", "dest": "app/__init__.py"}]
 }
